--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"eslint": "^8.15.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-html": "^6.2.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^8.0.1",
