--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-	"cSpell.words": [
-		"bagbox",
-		"Iconfig",
-		"mplus",
-		"updata"
-	]
+	"cSpell.words": ["bagbox", "Iconfig", "mplus", "updata"]
 }
