--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,11 +1,3 @@
 {
-	"cSpell.words": [
-		"bagbox",
-		"Iconfig",
-		"innter",
-		"mplus",
-		"Netherrack",
-		"Purpur",
-		"updata"
-	]
+	"cSpell.words": ["bagbox", "Iconfig", "innter", "mplus", "Netherrack", "Purpur", "updata"]
 }
