--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-	"cSpell.words": ["bagbox", "Iconfig", "innter", "mplus", "Netherrack", "Purpur", "updata"]
+	"cSpell.words": [
+		"bagbox",
+		"copyed",
+		"Iconfig",
+		"innter",
+		"mplus",
+		"Netherrack",
+		"Purpur",
+		"updata"
+	]
 }
