fix: vite config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,14 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noImplicitReturns": true,
-		"lib": ["esnext", "dom"],
+		"lib": [
+			"esnext",
+			"dom"
+		],
 		"baseUrl": "./",
 		"paths": {}
 	},
-	"include": ["./src"]
+	"include": [
+		"./src",
+	]
 }
