--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
 		"three": "^0.140.2"
 	},
 	"devDependencies": {
-		"@types/three": "^0.140.0",
 		"@commitlint/cli": "^16.3.0",
 		"@commitlint/config-conventional": "^16.2.4",
 		"@types/node": "^17.0.35",
+		"@types/three": "^0.140.0",
 		"@typescript-eslint/eslint-plugin": "^5.25.0",
 		"@typescript-eslint/parser": "^5.25.0",
 		"consola": "^2.15.3",
@@ -44,6 +44,7 @@
 		"typescript": "^4.6.4",
 		"typescript-eslint": "0.0.1-alpha.0",
 		"vite": "^2.9.9",
+		"vite-plugin-pwa": "^0.12.0",
 		"vite-plugin-style-import": "^2.0.0"
 	},
 	"lint-staged": {
