--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"author": "LiuKairui",
 	"license": "ISC",
 	"dependencies": {
+		"socket.io-client": "^4.5.1",
 		"three": "^0.140.2"
 	},
 	"devDependencies": {
