--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,9 @@
 		"baseUrl": ".",
 		"module": "esnext",
 		"target": "esnext",
-		"lib": ["esnext"],
+		"lib": [
+			"esnext"
+		],
 		"strict": true,
 		"outDir": "./dist",
 		"jsx": "preserve",
@@ -15,10 +17,16 @@
 		"sourceMap": true,
 		"noUnusedParameters": true,
 		"noImplicitReturns": true,
-		"types": ["express", "node"],
+		"types": [
+			"express",
+			"node"
+		],
 		"skipLibCheck": true,
 		"strictNullChecks": true,
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
 	},
-	"exclude": ["dist", "node_modules"]
+	"exclude": [
+		"dist",
+		"node_modules"
+	]
 }
