--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"test": "tsc ./ && nodemon ./dist/index.js -w"
 	},
+	"type": "module",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
