fix: multi-player

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,9 +3,7 @@
 		"baseUrl": ".",
 		"module": "esnext",
 		"target": "esnext",
-		"lib": [
-			"esnext"
-		],
+		"lib": ["esnext"],
 		"strict": true,
 		"outDir": "./dist",
 		"jsx": "preserve",
@@ -17,16 +15,10 @@
 		"sourceMap": false,
 		"noUnusedParameters": true,
 		"noImplicitReturns": true,
-		"types": [
-			"express",
-			"node"
-		],
+		"types": ["express", "node"],
 		"skipLibCheck": true,
 		"strictNullChecks": true,
 		"forceConsistentCasingInFileNames": true
 	},
-	"exclude": [
-		"dist",
-		"node_modules"
-	]
+	"exclude": ["dist", "node_modules"]
 }
